<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="#555555"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/equipement_2p"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spEquipement"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_shape">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/taille"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="86dp"

                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="2"
                        android:background="@drawable/cell_shape"
                        android:gravity="center"
                        android:text="@string/quantite"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@drawable/cell_shape"
                        android:gravity="center"
                        android:text="@string/possedee"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@drawable/cell_shape"
                        android:gravity="center"
                        android:text="@string/demandee"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spTaille"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvQtePossedee"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btRemoveQteDemandee"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/moins" />

                <EditText
                    android:id="@+id/etQteDemandee"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:autofillHints=""
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:textAlignment="center"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btAddQteDemandee"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/plus" />
            </LinearLayout>
        </TableRow>


    </TableLayout>


    <Button
        android:id="@+id/btSaveUserEquipement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/enregistrer" />
</LinearLayout>
