<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_documents"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/layoutDocumentPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_radius"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:orientation="vertical">
        <Button
            android:id="@+id/btOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ouvrir"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envoyer_e_mail"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"/>
    </LinearLayout>


</RelativeLayout>