<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="#555555"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/equipement_2p"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEquipement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:gravity="start"
        android:inputType="textCapSentences"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/taille_2p"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spTypeTailleEquipement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:gravity="start"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btSaveRespEquipement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/enregistrer" />
</LinearLayout>
